# logicverse-db-studio

./: .cursorrules  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: generate-brand-assets.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/config/: connections.rs  mod.rs  query_history.rs  saved_queries.rs  settings.rs
src-tauri/src/db/: backend.rs  driver.rs  er.rs  explain.rs  mod.rs  pool.rs  query.rs  ssh_tunnel.rs  types.rs
src-tauri/src/db/introspection/: mysql.rs  postgres.rs  sqlite.rs
src-tauri/src/security/: crypto.rs
src/components/: SplashScreen.tsx
src/components/connections/: ConnectionForm.tsx  ConnectionList.tsx  ConnectionTest.tsx  DriverIcons.tsx  DriverSelector.tsx  driverDefaults.ts  drivers.ts
src/components/editor/: EditorToolbar.tsx  ExplainPlan.tsx  QueryEditor.tsx  QueryHistory.tsx  QueryTabs.tsx  SavedQueriesDialog.tsx
src/components/layout/: AboutDialog.tsx  EditorCursorContext.tsx  KeyboardShortcutsDialog.tsx  MainPanel.tsx  MenuBar.tsx  Sidebar.tsx  StatusBar.tsx  TopBar.tsx
src/components/results/: ResultsBar.tsx  ResultsExport.tsx  ResultsFilter.tsx  ResultsPanel.tsx  ResultsTable.tsx
src/components/schema/: ERDiagram.tsx  SchemaSearch.tsx  SchemaTree.tsx  TableInfo.tsx
src/components/shared/: ConnectionIndicator.tsx  DataTypeIcon.tsx  Kbd.tsx  LogicVerseLogo.tsx  NullValue.tsx  Toast.tsx
src/components/ui/: badge.tsx  button.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  scroll-area.tsx  select.tsx  separator.tsx  tabs.tsx
src/hooks/: useConnection.ts  useQuery.ts  useSchema.ts
src/lib/: formatters.ts  tauri.ts
src/stores/: appActionsStore.ts  connectionStore.ts  queryStore.ts  schemaStore.ts  settingsStore.ts  uiStore.ts
