[package]
name = "logicverse-db-studio"
version = "0.1.0"
description = "LogicVerse DB Studio — lightweight database manager"
authors = ["Kayzzii"]
edition = "2021"

[lib]
name = "logicverse_db_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json", "rust_decimal"] }
tokio = { version = "1", features = ["sync", "time", "macros", "rt-multi-thread"] }
tokio-util = "0.7"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
keyring = "3"
percent-encoding = "2"
rust_decimal = { version = "1", features = ["serde"] }
once_cell = "1"
